@@ -1,6 +1,6 @@
-AC_INIT([Conky],[1.3.6_CVS_20060106],[brenden1@users.sourceforge.net])
+AC_INIT([Conky],[1.3.6_CVS_20060107],[brenden1@users.sourceforge.net])
 
-AM_INIT_AUTOMAKE(conky, 1.3.6_CVS_20060106)
+AM_INIT_AUTOMAKE(conky, 1.3.6_CVS_20060107)
 AM_CONFIG_HEADER(src/config.h)
 AC_PROG_LIBTOOL
 
@@ -76,6 +76,24 @@ AC_ARG_ENABLE(proc_uptime,
 
 if test $dah = "yes"; then
   AC_DEFINE(PROC_UPTIME, 1, [Define if you want to use /proc/uptime for uptime])
+fi
+
+dnl
+dnl Audacious
+dnl
+
+want_audacious=no
+AC_ARG_ENABLE(audacious,
+              [  --enable-audacious      enable if you want Audacious support [[default=no]]],
+              [want_audacious="$enableval"])
+
+AM_CONDITIONAL(BUILD_AUDACIOUS, test x$want_audacious = xyes)
+if test x$want_audacious = xyes; then
+        PKG_CHECK_MODULES([AUDACIOUS], [audacious >= 0.1],
+                          [], [AC_MSG_ERROR([Audacious 0.1 or higher is not installed])])
+        CFLAGS="$CFLAGS $AUDACIOUS_CFLAGS"
+        LIBS="$LIBS $AUDACIOUS_LIBS"
+        AC_DEFINE(AUDACIOUS, 1, [Define if you want BMPx support])
 fi
 
 dnl
